--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,11 @@
     --text-color: #757575;
     --footer-text-color: rgba(255, 255, 255, 0.6);
     --primary-title-color: #212121;
-    --accent-color: #2196F3;}
+    --accent-color: #2196F3;
+    --top-logo-color: #000;
+    --darck-background-color: #2F303A;
+    --light-background-color: #F5F4FA;
+    }
 
 
 body {
@@ -38,10 +42,203 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .header-logo {
     font-family: 'Raleway';
-    font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--accent-color)
+}
+
+.top-logo {
+    color: var(--top-logo-color);
+}
+
+.header-logo:hover,
+.header-logo:focus {
+    color: var(--accent-color);
+}
+
+.menu-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--primary-title-color);
+}
+
+
+.menu-link:hover,
+.menu-link:focus {
+    color: var(--accent-color);
+}
+
+.contact-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--text-color);
+}
+
+.current {
+    color: #2196f3;
+}
+
+.contact-link:hover,
+.contact-link:focus {
+    color: var(--accent-color);
+}
+
+/* ----------------hero---------------- */
+
+.hero {
+    background-color: var(--darck-background-color);
+}
+
+.hero-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--header-color);
+}
+
+.hero-btn {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--header-color);
+}
+
+.btn:hover,
+.btn:focus {
+    color: #188CE8;
+}
+
+/* ----------------advantage---------------- */
+.advantage {
+    background-color: var(--header-color);
+}
+
+.section-title {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-title-color);
+}
+
+.advantage-text {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+}
+
+/* ----------------about---------------- */
+
+.about {
+    background-color: var(--header-color);
+}
+
+.about-title {
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-title-color);
+}
+
+/* ----------------team---------------- */
+
+.team {
+    background-color: var(--light-background-color);
+}
+
+.team-title {
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-title-color);
+}
+
+.team-second-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-title-color);
+}
+
+.team-text {
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+}
+
+/* ----------------footer---------------- */
+
+.footer {
+    background-color: var(--darck-background-color);
+}
+
+.footer-logo {
+    color: var(--header-color)
+}
+
+.addres-item {
+    font-family: inherit;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--header-color);
+}
+
+.footer-contact {
+    font-family: inherit;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--footer-text-color);
+
+}
+
+.addres-item:hover,
+.addres-item:focus {
+    color: var(--accent-color);
+}
+
+/* ----------------portfolio---------------- */
+.filter-btn {
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-title-color);
+}
+
+.exemple-title {
+    font-size: 18px;
+    line-height: 2.0;
+    letter-spacing: 0.06em;
+    color: var(--primary-title-color);
+}
+
+.exemple-text {
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
 }
