--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,16 @@
     --top-logo-color: #000;
     --darck-background-color: #2F303A;
     --light-background-color: #F5F4FA;
+    --main-background-color: #ffffff;
     }
 
 
 body {
 font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+font-size: 14px;
+letter-spacing: 0.03em;
+color: var(--text-color);
+background-color: var(--main-background-color);
 }
 
 .visually-hidden {
@@ -45,7 +49,6 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     color: var(--accent-color)
 }
 
@@ -60,7 +63,6 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .menu-link {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--primary-title-color);
@@ -74,14 +76,13 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .contact-link {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--text-color);
+    color: inherit;
 }
 
 .current {
-    color: #2196f3;
+    color: var(--accent-color)
 }
 
 .contact-link:hover,
@@ -116,7 +117,7 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .btn:hover,
 .btn:focus {
-    color: #188CE8;
+    color: var(--accent-color)
 }
 
 /* ----------------advantage---------------- */
@@ -125,18 +126,13 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .section-title {
-    font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-title-color);
 }
 
 .advantage-text {
-    font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--text-color);
 }
 
 /* ----------------about---------------- */
@@ -149,7 +145,6 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--primary-title-color);
 }
 
@@ -163,7 +158,6 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--primary-title-color);
 }
 
@@ -172,7 +166,6 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--primary-title-color);
 }
 
@@ -180,8 +173,6 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--text-color);
 }
 
 /* ----------------footer---------------- */
@@ -197,18 +188,14 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 .addres-item {
     font-family: inherit;
     font-style: normal;
-    font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
     color: var(--header-color);
 }
 
 .footer-contact {
     font-family: inherit;
     font-style: normal;
-    font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
     color: var(--footer-text-color);
 
 }
@@ -225,7 +212,7 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     line-height: 1.63;
     text-align: center;
-    letter-spacing: 0.03em;
+    letter-spacing: inherit;
     color: var(--primary-title-color);
 }
 
@@ -239,6 +226,5 @@ font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 .exemple-text {
     font-size: 16px;
     line-height: 1.88;
-    letter-spacing: 0.03em;
     color: var(--text-color);
 }
